# ParticleHandler

./: CMakeLists.txt  TYPES.h  logs.txt  main.cpp  test.json
Distinguisher/: CMakeLists.txt
Distinguisher/include/: ParticleDistinguisher.h  ParticleDistinguisherSettinger.h  ParticleRecognizer.h
Distinguisher/lib/: ParticleDistinguisher.cpp  ParticleDistinguisherSettinger.cpp  ParticleRecognizer.cpp
Filtering/: CMakeLists.txt
Filtering/Filters/: CMakeLists.txt
Filtering/Filters/include/: BandWFilter.h  EmphasizeFilter.h  EmphasizeFilterSettinger.h  Filter.h  GrayScaleFilter.h  GreyScaleFilter.h
Filtering/Filters/lib/: BandWFilter.cpp  EmphasizeFilter.cpp  EmphasizeFilterSettinger.cpp  Filter.cpp  GrayScaleFilter.cpp  GreyScaleFilter.cpp
Filtering/include/: FilterApplier.h  FilterApplierSettinger.h  ImageHandler.h
Filtering/lib/: FilterApplier.cpp  FilterApplierSettinger.cpp  ImageHandler.cpp
FrameHandler/: CMakeLists.txt
FrameHandler/include/: FrameHandler.h
FrameHandler/lib/: FrameHandler.cpp
Loader/: CMakeLists.txt
Loader/include/: LoadableObjectBase.h  Loader.h
Loader/lib/: LoadableObjectBase.cpp  Loader.cpp
ObjectManager/: CMakeLists.txt
ObjectManager/include/: ObjectManager.h
ObjectManager/lib/: ObjectManager.cpp
ParticleRecognizer/: CMakeLists.txt
ParticleRecognizer/include/: ParticleRecognizer.h
ParticleRecognizer/lib/: ParticleRecognizer.cpp
PositionAnalyser/: CMakeLists.txt
PositionAnalyser/include/: PositionAnalyser.h
PositionAnalyser/lib/: PositionAnalyser.cpp
Readers/: CMakeLists.txt
Readers/Path/: CMakeLists.txt
Readers/Path/include/: Path.h
Readers/Path/lib/: Path.cpp
Readers/include/: FileReader.h  ImageReader.h  VideoReader.h  VideoReaderSettinger.h
Readers/lib/: FileReader.cpp  ImageReader.cpp  VideoReader.cpp  VideoReaderSettinger.cpp
SettingsHandler/: CMakeLists.txt
SettingsHandler/include/: Settinger.h  SettingsHandler.h
SettingsHandler/lib/: Settinger.cpp  SettingsHandler.cpp
Tracker/: CMakeLists.txt
Tracker/include/: PositionHandler.h  PositionHandlerSettinger.h  PositionLogger.h  PositionTracker.h  PositionTrackerSettinger.h
Tracker/lib/: PoisitoinTracker.cpp  PositionHandler.cpp  PositionHandlerSettinger.cpp  PositionLogger.cpp  PositionTrackerSettinger.cpp
